# gpui-deb-installer

./: Cargo.toml  README.md  gpui-deb-installer.desktop  install-icon.sh
.github/workflows/: build.yml
.kiro/steering/: first-principles.md
assets/: gpui-deb-installer.desktop
debian/: postinst
locales/: en.yml  zh-CN.yml
src/: app.rs  i18n.rs  main.rs  window_state.rs
src/models/: config.rs  db.rs  mod.rs  package.rs
src/utils/: deb_files.rs  deb_reader.rs  dpkg.rs  mod.rs
src/views/: files_preview.rs  install.rs  mod.rs  packages.rs
