[package]
name = "gpui-deb-installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gpui-deb-installer"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
async-channel = "2"
